added context experiment to evaluation incl figure

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1,6 +1,6 @@
 \input{./tex/main/meaningInVideo.tex}
 \input{./tex/main/humanComputation.tex}
-\input{./tex/main/storytelling.tex}
+% \input{./tex/main/storytelling.tex}
 \input{./tex/main/weporter.tex}
 \input{./tex/main/evaluation.tex}
 \input{./tex/main/discussion.tex}
